# golden-repo-retriever

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  start_api.py  start_worker.py
samples/: microsoft_report.txt
src/golden_repo_retriever/: __init__.py  agents.py  cli.py  config.py  documents.py  extraction.py  knowledge_store.py  llm.py  logging_utils.py  market_data.py  queueing.py  reporting.py  sample_data.py  state.py  storage.py  tools.py  worker.py  workflow.py
src/golden_repo_retriever/api/: __init__.py  app.py  schemas.py
static/: index.html
tests/: test_agents.py  test_api.py  test_cli.py  test_config.py  test_documents.py  test_extraction.py  test_knowledge_store.py  test_llm.py  test_market_data.py  test_reporting.py  test_storage.py  test_worker.py  test_workflow.py
